--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ SV.apiKey=testanvui
 SV.secretKey=testanvui123 
 
 
-application.allowed.methods=POST
+application.allowed.methods=POST,GET
 application.allowed.origins=localhost,localhost:8888
 application.allowed.headers=X-RateLimit-Limit,x-access-token,client_id
 rate.limiter=100
