--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,11 @@
             <version>8.0.18</version>
         </dependency>
         <dependency>
+            <groupId>com.corundumstudio.socketio</groupId>
+            <artifactId>netty-socketio</artifactId>
+            <version>1.7.7</version>
+        </dependency>
+        <dependency>
             <groupId>io.socket</groupId>
             <artifactId>engine.io-client</artifactId>
             <version>1.0.0</version>
